gccida/g3/make_edge
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_edge/src/cfg.c:847:12: error: expected expression
*( _OWORD *)&result->insns = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_edge/src/cfg.c:847:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->insns = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_edge/src/cfg.c:848:12: error: expected expression
*( _OWORD *)&result->pred_next = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_edge/src/cfg.c:848:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->pred_next = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_edge/src/cfg.c:849:12: error: expected expression
*( _OWORD *)&result->src = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_edge/src/cfg.c:849:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->src = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_edge/src/cfg.c:850:12: error: expected expression
*( _OWORD *)&result->flags = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_edge/src/cfg.c:850:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->flags = 0LL; 
   ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_edge/src/obj/cfg.o] Error 1
